cantinho da manhã

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;1,100;1,200;1,300&display=swap" rel="stylesheet">
 
+
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 
     <script src="jQuery/jquery-3.6.1.min.js"></script>
@@ -20,6 +22,7 @@
             <li> <a href="#home">Home</a> </li>
             <li> <a href="#localizacao">Localização</a> </li>
             <li> <a href="#faleconosco">Fale Conosco</a> </li>
+            <li><a href="#historia">Nossa História</a></li>
         </ul>
     </div>
     <div class="header" >
@@ -84,13 +87,99 @@
     </section>
 
     <section class="section3">
-
-        <div class="box-container">
                 <div class="titulo">
                    <h1>O que nossos clientes dizem</h1>
                 </div>
+         <div class="box-container">
+
+               <div class="box">
+                <div class="img">
+                    <img src="img/mulher1.jpg" alt="">
+                </div>
+                <h2>Raphaela Fonseca</h2>
+                <div class="estrelas">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                </div>
+
+                <p>
+                    Muito aconchegante, lugar bem localizado e cafés delisiosos, com certeza valeu muito apena.
+                </p>
+           </div>
+
+               <div class="box">
+                    <div class="img">
+                        <img src="img/homem3.jpg" alt="">
+                    </div>
+                    <h2>Rodrigo Martins</h2>
+                    <div class="estrelas">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+
+                    <p>
+                        Magnífico, experiência incrível, além de produtor de<br>alta qualidade, espaço agradável e funcionários educados. 
+                    </p>
+               </div>
+
+            
+           <div class="box">
+            <div class="img">
+                <img src="img/homem2.jpg" alt="">
+            </div>
+            <h2>Carlos Roberto</h2>
+            <div class="estrelas">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+
+            </div>
+
+            <p>
+              Inacreditável, fui a primeira vez eu fiquei apaixonado pelo local, e que café maravilhoso !, com certeza se tornou um dos meus lugares favoritos.
+            </p>
+       </div>
+
+
+       <div class="box">
+        <div class="img">
+            <img src="img/mulher2.jpg" alt="">
         </div>
-    
+        <h2>Julia Alburquerque</h2>
+        <div class="estrelas">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+
+        </div>
+
+        <p>
+            Surreal !, funcionários simpáticos e educados, <br> levei minha família para conhecer a cafeteria e todos adoraram, levarei mais vezes !.
+        </p>
+   </div>
+         </div>
+
+    </section>
+
+
+    <section class="section4" id="historia">
+        <div class="titulo">
+            <h1>Nossa História</h1>
+        </div>
+
+        <div class="box">
+       <p> Fundamos nossa primeira cafeteria em 1994 na grande cidade de São Paulo, nunca teriamos imaginados o quanto de nosso negócio iria crescer e se tornar uma das Cafeterias mais bem falada de São Paulo. Em 2009 decidimos expandir nosso negócio e com 5 anos em 2014 abrimos mais de 6 Cafeterias, sempre com o nosso lema "experiência e Conforto". Nosso propósito é trazer conforto para nossos clientes, sabemos que não é apenas o ato de ir tomar um café, tem toda uma experiência incrível de ir ao um ambiente que nos conforta e nos faça sentir confortável, e é por isso que os nossos fundadores criaram  a Cafeteria cantinho Da Manhã proporcionando qualidade e conforto para nossos clientes.</p>
+        </div>
     </section>
 
 <script src="script.js"></script>
